Upgrade to nona 3.0